--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             font: 13px/1.4 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
             color: #FFF;
             background-image: url("rs/img/bg04.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
         }
 
         .bgcontainer {
