--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
     <title>Coming Soon</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon"/>
@@ -17,7 +17,8 @@
 <div class="container">
     <div class="row">
         <div class="col hcenter">
-            <div class="ht2 ani-txt we">WE</div><div class="ht2 af-txt">&nbsp;ARE</div>
+            <div class="ht2 ani-txt we">WE</div>
+            <div class="ht2 af-txt">&nbsp;ARE</div>
         </div>
     </div>
     <div class="row">
