--- a/countdown.html
+++ b/countdown.html
@@ -50,7 +50,7 @@
 <script type="text/javascript">
     $(function () {
         // 开始倒计时
-        var endDate = "2017-11-22";
+        var endDate = "2017-11-22 18:00:00";
         var $cd = $('.countdown');
         var $days = $cd.find('.days');
         var $hrs = $cd.find('.hrs');
