--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="shortcut icon" href="favicon.ico">
     <title>NutzBoot</title>
     <!--字体-->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>-->
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>-->
     <!--依赖css-->
     <link href="rs/css/bootstrap.min.css" rel="stylesheet">
     <link href="rs/css/animate.css" rel="stylesheet">
