--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#doc">文档手册</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#faq">FAQ</a>
-                </li>
+                <!--<li class="nav-item">-->
+                    <!--<a class="nav-link" href="#faq">FAQ</a>-->
+                <!--</li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="https://nutzam.com" target="_blank">关于Nutz</a>
                 </li>
@@ -221,7 +221,7 @@
 <!-- END HOME -->
 
 <!-- FAQ -->
-<section class="section bg-gray" id="faq">
+<section class="section bg-gray" id="faq" style="display: none">
     <div class="container">
 
         <div class="row">
