--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#doc">文档手册</a>
                 </li>
-                <!--<li class="nav-item">-->
-                    <!--<a class="nav-link" href="#faq">FAQ</a>-->
-                <!--</li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="#faq">FAQ</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://nutzam.com" target="_blank">关于Nutz</a>
                 </li>
@@ -221,44 +221,55 @@
 <!-- END HOME -->
 
 <!-- FAQ -->
-<section class="section bg-gray" id="faq" style="display: none">
+<section class="section bg-gray" id="faq">
     <div class="container">
 
         <div class="row">
             <div class="col-sm-12 text-center">
                 <h1 class="title zoomIn animated wow" data-wow-delay=".1s">FAQ</h1>
-                <p class="sub-title zoomIn animated wow" data-wow-delay=".2s">这里有很多常见问题的答案
-                    <br/> 没有你需要的问题? 那就直接上Github给我们提交Issue吧. </p>
+                <p class="sub-title zoomIn animated wow" data-wow-delay=".2s">
+                    <br/> 暂时没啥问题可写? 那就直接上Github给我们提交Issue吧. </p>
             </div>
         </div>
-        <div class="row justify-content-center">
 
-            <div class="col-md-5">
-                <div class="animated fadeInLeft wow" data-wow-delay=".1s">
-                    <h4 class="question" data-wow-delay=".1s">问题1?</h4>
-                    <p class="answer">等wendal填充</p>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="text-center">
+                    <a href="https://github.com/nutzam/nutzboot/issues" target="_blank"
+                       class="btn btn-primary btn-rounded w-lg animated fadeInDown wow" data-wow-delay=".2s">写个Issue</a>
+                    <div class="clearfix"></div>
                 </div>
-
-                <div class="animated fadeInLeft wow" data-wow-delay=".3s">
-                    <h4 class="question" data-wow-delay=".1s">问题1?</h4>
-                    <p class="answer">等wendal填充</p>
-                </div>
-
-            </div>
-
-            <div class="col-md-5">
-                <div class="animated fadeInRight wow" data-wow-delay=".2s">
-                    <h4 class="question" data-wow-delay=".1s">问题1?</h4>
-                    <p class="answer">等wendal填充</p>
-                </div>
-
-                <div class="animated fadeInRight wow" data-wow-delay=".4s">
-                    <h4 class="question" data-wow-delay=".1s">问题1?</h4>
-                    <p class="answer">等wendal填充</p>
-                </div>
-
             </div>
         </div>
+
+        <!--<div class="row justify-content-center">-->
+
+            <!--<div class="col-md-5">-->
+                <!--<div class="animated fadeInLeft wow" data-wow-delay=".1s">-->
+                    <!--<h4 class="question" data-wow-delay=".1s">问题1?</h4>-->
+                    <!--<p class="answer">等wendal填充</p>-->
+                <!--</div>-->
+
+                <!--<div class="animated fadeInLeft wow" data-wow-delay=".3s">-->
+                    <!--<h4 class="question" data-wow-delay=".1s">问题1?</h4>-->
+                    <!--<p class="answer">等wendal填充</p>-->
+                <!--</div>-->
+
+            <!--</div>-->
+
+            <!--<div class="col-md-5">-->
+                <!--<div class="animated fadeInRight wow" data-wow-delay=".2s">-->
+                    <!--<h4 class="question" data-wow-delay=".1s">问题1?</h4>-->
+                    <!--<p class="answer">等wendal填充</p>-->
+                <!--</div>-->
+
+                <!--<div class="animated fadeInRight wow" data-wow-delay=".4s">-->
+                    <!--<h4 class="question" data-wow-delay=".1s">问题1?</h4>-->
+                    <!--<p class="answer">等wendal填充</p>-->
+                <!--</div>-->
+
+            <!--</div>-->
+        <!--</div>-->
 
     </div>
 </section>
