--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
         <div class="row text-center">
             <div class="col-md-3 col-sm-3 facts">
                 <i class="ti-timer"></i>
-                <h1><span class="counter">2920</span> +</h1>
-                <h4>天</h4>
+                <h1><span class="counter">9</span> +</h1>
+                <h4>年</h4>
             </div>
             <div class="col-md-3 col-sm-3 facts">
                 <i class="ti-pencil-alt"></i>
-                <h1><span class="counter">100000</span> +</h1>
-                <h4>行代码</h4>
+                <h1><span class="counter">100</span> +</h1>
+                <h4>k行代码</h4>
             </div>
             <div class="col-md-3 col-sm-3 facts">
                 <i class="ti-briefcase"></i>
@@ -305,7 +305,7 @@
 <script src="rs/js/SmoothScroll.js"></script>
 <script src="rs/js/wow.min.js"></script>
 <script src="rs/js/jquery.waypoints.min.js"></script>
-<script src="rs/js/jquery.counterup.min.js"></script>
+<script src="rs/js/jquery.countup.js"></script>
 <!--主js-->
 <script src="rs/js/main.js"></script>
 </body>
