修改 velocity拼写错误

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <h4>模板引擎</h4>
                         <ul>
                             <li>Beetl</li>
-                            <li>Vecloity</li>
+                            <li>Velocity</li>
                             <li>FreeMarker</li>
                             <li>Thymeleaf</li>
                         </ul>
