--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
                     <a class="nav-link" href="#faq">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://nutzam.com" target="_blank">关于Nutz</a>
+                    <a class="nav-link" href="https://gitee.com/nutz/nutzboot" target="_blank">NB@码云</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/nutzam/nutzboot" target="_blank">NB@Github</a>
                 </li>
             </ul>
-
         </div>
     </div>
 </nav>
